# exoplanet-hunter-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  HANDOVER.md  Makefile  README.md  docker-compose.yml  environment.yml  fly.toml  render.yaml
.claude/: launch.json
.dvc/: config
.github/workflows/: ci.yml
api/: pyproject.toml
api/app/: main.py  schemas.py
api/app/routes/: candidates.py  reliability.py  score.py
api/tests/: test_candidates.py  test_contract.py  test_reliability.py  test_score_route.py
data/: .gitignore  README.md  catalogue.dvc  exofop.dvc  labels.dvc
data/processed/: .gitignore  tfrecords.dvc  views.npz.dvc
docker/: api-entrypoint.sh  api.Dockerfile  constraints.txt  frontend.Dockerfile  train.Dockerfile
docs/: DEPLOY.md  OPERATING.md  architecture.md  data_provenance.md  pipeline_diagram.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CandidatesTable.tsx  ReliabilityChart.tsx  VettingPanel.tsx
infra/: README.md
models/: registry.json
orchestration/: README.md
orchestration/flows/: refresh_pipeline.py
pipeline/: README.md  pyproject.toml
pipeline/conf/: config.yaml
pipeline/conf/data/: default.yaml  full.yaml  large.yaml  small.yaml
pipeline/conf/model/: cnn_dualview.yaml  cnn_dualview_stellar.yaml  random_forest.yaml
pipeline/conf/preprocess/: default.yaml
pipeline/conf/train/: default.yaml  tune.yaml
pipeline/scripts/: build_dataset.py  eval_since_confirmed.py  export_predictions.py  ingest_exofop.py  make_performance_figures.py  preprocess_only.py  promotion_gate.py  recalibrate_run.py  render_vetting.py  score_candidates.py  score_target.py  shard_views.py  uncertainty_eval.py  validate_candidates.py  validate_data.py
pipeline/src/exoplanet_hunter/: __init__.py
pipeline/src/exoplanet_hunter/data/: __init__.py  catalog.py  download.py  exofop.py  stellar.py
pipeline/src/exoplanet_hunter/datasets/: __init__.py  augment.py  aux_transform.py  pipeline.py  tfrecords.py  views_io.py
pipeline/src/exoplanet_hunter/eval/: __init__.py  metrics.py  vetting.py
pipeline/src/exoplanet_hunter/features/: __init__.py  centroid.py  followup.py  handcrafted.py  noise.py
pipeline/src/exoplanet_hunter/models/: __init__.py  baseline_rf.py  cnn_dualview.py  losses.py  uncertainty.py
pipeline/src/exoplanet_hunter/preprocess/: __init__.py  clean.py  fold.py  views.py
pipeline/src/exoplanet_hunter/scoring/: __init__.py  diagnostics.py  ensemble.py  service.py
pipeline/src/exoplanet_hunter/search/: __init__.py  bls.py  tls.py
pipeline/src/exoplanet_hunter/training/: __init__.py  calibration.py  mlflow_utils.py  precision.py  train.py  tune.py
pipeline/src/exoplanet_hunter/utils/: __init__.py  logging.py  paths.py  seeds.py
pipeline/src/exoplanet_hunter/validation/: __init__.py  leakage.py  promotion.py  schemas.py  statistical.py  trigger.py
pipeline/tests/: test_calibration.py  test_catalog.py  test_datasets.py  test_download_repair.py  test_exofop.py  test_followup.py  test_imports.py  test_noise.py  test_scoring.py  test_search.py  test_statistical_validation.py  test_trigger.py  test_tuning.py  test_validation.py
scripts-dev/: com.exoplanet-hunter.refresh.plist  run-api.sh
