[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-hunter-api"
version = "2.0.0.dev0"
description = "FastAPI serving layer: TIC ID -> live calibrated score + vetting data."
authors = [{ name = "Oliver Donaldson" }]
requires-python = ">=3.11"
license = { text = "MIT" }

# `exoplanet-hunter` (the pipeline package) is a required runtime dependency,
# installed as a sibling editable install rather than pinned here:
#     pip install -e ./pipeline -e ./api
# The api.Dockerfile does the same inside the image, so serving always runs
# the exact preprocessing the model was trained with.
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
