[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exoplanet-hunter"
version = "2.0.0.dev0"
description = "Self-refreshing, self-validating deep-learning pipeline for detecting exoplanet transits in NASA TESS/Kepler light curves."
authors = [{ name = "Oliver Donaldson" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["astronomy", "exoplanets", "tess", "kepler", "deep-learning", "mlops"]

dependencies = [
    # --- Astronomy ---
    "lightkurve>=2.5",
    "astropy>=6.1",
    "astroquery>=0.4.7",
    "transitleastsquares>=1.0.31",
    # --- Core scientific stack ---
    "numpy>=1.26,<2.1",
    "scipy>=1.13",
    "pandas>=2.2",
    "pyarrow>=16",
    "matplotlib>=3.9",
    # --- Classical ML (RF baseline + calibration bundle I/O) ---
    "scikit-learn>=1.5",
    "joblib>=1.4",
    # --- Deep learning ---
    "tensorflow>=2.16,<2.18",
    'tensorflow-metal>=1.1; platform_system == "Darwin" and platform_machine == "arm64"',
    # --- Validation gates ---
    "pandera>=0.24",
    # --- Experiment + config ---
    "mlflow>=2.14",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # --- Runtime niceties ---
    "tqdm>=4.66",
    "rich>=13.7",
]

# Branch-gated dependencies: each V2 feature branch adds its own tools when
# it lands, so the dependency list never runs ahead of working code.
#   feat/dvc-versioning   -> dvc[s3]
#   feat/dashboard        -> streamlit, duckdb
#   feat/orchestrator     -> prefect (or dagster)
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
    "types-tqdm",
    "pandas-stubs",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
exoplanet_hunter = ["py.typed"]

# ---------------------------- Ruff ----------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific rules
    "NPY",      # numpy
    "PD",       # pandas-vet
]
ignore = [
    "E501",     # line length handled by formatter
    "E741",     # `l` is conventional in this codebase for the local-view tensor (paired with `g`)
    "RUF001",   # ambiguous unicode in strings — user-facing verdicts/logs legitimately use σ
    "RUF002",   # ambiguous unicode in docstrings — σ, ×, √, →, α, etc. are conventional physics/maths notation
    "RUF003",   # ambiguous unicode in comments — same rationale as RUF002
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------- mypy ----------------------------

[tool.mypy]
python_version = "3.11"
files = ["src"]
warn_unused_configs = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true     # astronomy libs lack stubs

[[tool.mypy.overrides]]
module = "exoplanet_hunter.*"
disallow_untyped_defs = true      # opt in to strict typing for our own code

# ---------------------------- pytest --------------------------

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = [
    "network: hits MAST/NASA Exoplanet Archive (skipped by default)",
    "slow: takes more than a few seconds",
]
filterwarnings = [
    "ignore::DeprecationWarning:lightkurve.*",
    "ignore::DeprecationWarning:astropy.*",
]
